overflow: hidden fix

--- a/styles/input.less
+++ b/styles/input.less
@@ -94,5 +94,6 @@ ux-dialog {
 }
 
 .ux-dialog-open {
-  overflow: hidden;
+  // this flicker the screen if overflow(y) is set to 'scroll' by default
+  // overflow: hidden;
 }
